--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,11 @@
 }
 
 * {    
+    margin: 0;
     padding: 0;
     border: 0; 
     outline: 0;          
-    box-sizing: border-box;       
+    box-sizing: border-box;         
   } 
   
   
@@ -43,58 +44,6 @@
     background: var(--cor-bg);    
     background-image: url(../img/bg-texture.png);
   }
-
-  .acordeoes {
-    position: relative;
-    margin: 100px auto;
-    width: 500px;  
-  }
-
-  input[type="checkbox"] {
-    display: none;
-  }
-
-  .acordeoes label {
-    display: flex;
-    color: var(--cor-branco);
-    padding: 15px 20px;
-    cursor: pointer;
-    background-color: var(--cor-azul);
-    /* font-weight: 700;
-    text-transform: uppercase; */
-  }
-
-  .acordeoes label::after {
-    content: "\f077";
-    font-family: fontawesome;
-    right: 20px;
-    position: absolute;
-    transition: .5s;
-  }
-
-  .acordeoes input[type="checkbox"]:checked ~ label::after {
-    transform: rotate(180deg);
-  }
-
-  .acordeoes input[type="checkbox"]:checked ~ .acordeao-conteudo {
-    height: auto;
-  }
-
-  .acordeoes-main {
-    margin-top: 10px;
-    box-shadow: 0px 0px 5px var(--cor-cinza);
-    background-color: var(--cor-branco);
-  }
-
-  .acordeao-conteudo {    
-    height: 0;
-    overflow: hidden;
-  }
-
-  .acordeao-conteudo p {
-    padding: 10px 20px;
-  }
-
 
 
 
