--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 
   --cor-branco: #fff;  
   --cor-cinza:#eee;
+  --cor-cinza1: #ccc;
   --cor-cinza-variante: rgba(255, 255, 255, 0.7);
   --cor-preto: #000;
   
@@ -27,23 +28,96 @@
     
 }
 
-* {    
-    margin: 0;
-    padding: 0;
-    border: 0; 
-    outline: 0;          
-    box-sizing: border-box;         
-  } 
-  
-  
-  body {    
-    height: 100vh;
-    font-family: 'Roboto', sans-serif;    
-    align-items: center; 
+html {
+  box-sizing: border-box;
+}  
+
+*,
+*::after,
+*::before {
+  box-sizing: inherit;        
+} 
+
+  body {     
+    padding: 0; 
+    margin: 0;      
+    font-family: 'Roboto', sans-serif; 
+    display: flex;   
     justify-content: center;
+    align-items: center;     
+    height: 70vh;
     background: var(--cor-bg);    
     background-image: url(../img/bg-texture.png);
   }
 
+  .searchbox {
+    position: relative;
+    width: 480px;
+    height: 40px;
+    margin: 0 1em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left: 25px;
+    padding-right: 25px;
+    background: var(--cor-branco);
+    border: 2px solid var(--cor-cinza1);
+    border-radius: 30px;
+  }
+
+  input {
+    width: 480px;
+    height: 30px;   
+    padding: 13px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    border-radius: 30px;
+  }
+
+  .search_icon {    
+    width: 20px;    
+    cursor: pointer;
+    opacity: .5;
+  }
+
+  .image_icon { 
+    margin-top: 22px;
+    width: 20px;   
+    cursor: pointer;       
+  }
+
+  .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+
+  .tooltiptext {
+    visibility: hidden;
+    position: relative;
+    width: 90px;
+    background-color: var(--cor-preto);
+    font-size: .6em;
+    color: var(--cor-branco);
+    text-align: center;
+    padding: 5px;
+    top: 32px;
+    right: -36px;
+  }
+
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltiptext::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent var(--cor-preto) transparent;
+    margin-left: -5px;
+  }
 
 
