--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 :root {
   
@@ -25,99 +26,53 @@
   --container-width-lg: 80%;
   --container-width-md: 90%;
   --container-width-sm: 94%;
+
+--transition: all 400ms ease;
     
 }
 
-html {
-  box-sizing: border-box;
-}  
 
-*,
-*::after,
-*::before {
-  box-sizing: inherit;        
-} 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
 
   body {     
-    padding: 0; 
-    margin: 0;      
-    font-family: 'Roboto', sans-serif; 
-    display: flex;   
+    height: 100vh;
+    display: flex;
+    align-items: center; 
     justify-content: center;
-    align-items: center;     
-    height: 70vh;
-    background: var(--cor-bg);    
+  font-family: "Poppins", sans-serif;
+  background: var(--color-bg);
+  color: var(--color-white);
+  line-height: 1.7; 
     background-image: url(../img/bg-texture.png);
   }
 
-  .searchbox {
-    position: relative;
-    width: 480px;
-    height: 40px;
-    margin: 0 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left: 25px;
-    padding-right: 25px;
-    background: var(--cor-branco);
-    border: 2px solid var(--cor-cinza1);
-    border-radius: 30px;
-  }
 
-  input {
-    width: 480px;
-    height: 30px;   
-    padding: 13px;
-    border: none;
-    outline: none;
-    font-size: 16px;
-    border-radius: 30px;
-  }
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 500;
+}
 
-  .search_icon {    
-    width: 20px;    
-    cursor: pointer;
-    opacity: .5;
-  }
-
-  .image_icon { 
-    margin-top: 22px;
-    width: 20px;   
-    cursor: pointer;       
-  }
-
-  .tooltip {
-    position: relative;
-    display: inline-block;
-  }
-
-  .tooltiptext {
-    visibility: hidden;
-    position: relative;
-    width: 90px;
-    background-color: var(--cor-preto);
-    font-size: .6em;
-    color: var(--cor-branco);
-    text-align: center;
-    padding: 5px;
-    top: 32px;
-    right: -36px;
-  }
-
-  .tooltip:hover .tooltiptext {
-    visibility: visible;
-  }
-
-  .tooltiptext::after {
-    content: "";
-    position: absolute;
-    bottom: 100%;
-    left: 50%;
-    border-width: 5px;
-    border-style: solid;
-    border-color: transparent transparent var(--cor-preto) transparent;
-    margin-left: -5px;
-  }
-
+h1 {
+  font-size: 2.5rem;
+}
 
