--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,18 @@
   --cor-branco: #fff;  
   --cor-cinza:#eee;
   --cor-cinza1: #ccc;
+  --cor-cinza2: #ededed;  
   --cor-cinza-variante: rgba(255, 255, 255, 0.7);
   --cor-preto: #000;
   
   --cor-roxo: #454cad;
+  --cor-roxo1:#1c2539;
   --cor-azul-var: #5f6982;
   --cor-verde: #3be7bc;
   --cor-azul:#2192FF;
+  --cor-azul1: #ABB9D3;
+  --cor-azul2: #283c85;
+  --cor-azul3: #40E4FF;
   
   --container-width-lg: 80%;
   --container-width-md: 90%;
@@ -32,37 +37,41 @@
 }
 
 
-* {
-  margin: 0;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  /* margin: 0;
   padding: 0;
   border: 0;
-  outline: 0;
-  box-sizing: border-box;
+  outline: 0;  
   list-style: none;
-  text-decoration: none;
+  text-decoration: none; */
 }
-
 
 html {
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 ::-webkit-scrollbar {
   display: none;
 }
 
-  body {     
-    height: 100vh;
+  body {  
+    margin: 0;
+    padding: 0;   
+    height: 80vh;
     display: flex;
     align-items: center; 
     justify-content: center;
-  font-family: "Poppins", sans-serif;
-  background: var(--color-bg);
-  color: var(--color-white);
-  line-height: 1.7; 
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    background: var(--cor-bg);
+    background-color: var(--cor-roxo1);    
+    line-height: 1.7; 
     background-image: url(../img/bg-texture.png);
   }
-
 
 h1,
 h2,
@@ -74,5 +83,52 @@ h5 {
 
 h1 {
   font-size: 2.5rem;
+}
+
+.container {
+  background-color: var(--cor-azul2);
+  display: flex;
+  padding: 15px;
+  border-radius: 15px;
+  justify-content: space-between;
+  border: 2px solid var(--cor-cinza2);
+}
+
+.tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  padding: 0 1.2em;
+  margin: 0 1.2em;
+  transition: background 0.5s linear;
+}
+
+.tab i {
+  font-size: 2em;
+  color: var(--cor-azul1);
+  cursor: pointer;
+}
+
+.tab.active i {
+  font-size: 1.4em;
+  color: var(--cor-azul2);
+}
+
+.tab p {
+  font-weight: bold;
+  overflow: hidden;
+  max-width: 0;
+}
+
+.active p {
+  margin-left: 1em;
+  max-width: 200px;
+  transition: max-width 0.8s linear;
+}
+
+.active {
+  background-color: var(--cor-azul3);
+  color: var(--cor-azul2);
 }
 
